--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -126,6 +126,8 @@ code {
 
 :root {
   font-family: Roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-optical-sizing: auto;
+  font-display: swap;
   line-height: 1.5;
   font-weight: 400;
 
