--- a/client/src/components/pages/not-found/not-found.module.css
+++ b/client/src/components/pages/not-found/not-found.module.css
@@ -1,3 +1,7 @@
 .not-found {
-
+  width: 100%;
+  height: 223px;
+  flex-shrink: 0;
+  background: #2e2e2e;
+  box-shadow: 0px 25px 20px 0px rgba(0, 0, 0, 0.45);
 }
