--- a/client/src/components/pages/home/case-study.module.css
+++ b/client/src/components/pages/home/case-study.module.css
@@ -1,2 +1,37 @@
-.home-page .case-study {
+.case-study {
+    line-height: normal;
+    background-color: var(--primary-background-color-gray);
+    color: var(--primary-text-color-white);
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    padding-bottom: 64px;
+    padding-top: 32px;
+    max-width: 100vw;
+    box-sizing: border-box;
+    padding-left: min(32px, 4vw);
+    padding-right: min(32px, 4vw);
+    box-sizing: border-box;
+    h2 {
+      color: #FFFFFF;
+      background-color: #2E2E2E;
+      box-sizing: border-box;
+      overflow-wrap: break-word !important;
+      word-wrap: break-word !important;
+      text-align: left;
+      box-sizing: border-box;
+      flex-shrink: 1;
+      max-width: 100%;
+    }
+    .dottedThickBorder {
+      border: 10px solid transparent;
+      background:
+        radial-gradient(circle at center, white 1px, transparent 1.1px),
+        #F5B524;
+      background-size: 10px 10px, 100% 100%;
+      background-origin: border-box, border-box;
+      background-clip: border-box, border-box;
+    }
 }
