Implement comments from PR 140 (#142)
This commit implements comments from [this
PR](https://github.com/codeforboston/boston-liquor-license-tracker/pull/140)

--- a/client/src/components/layout/footer.module.css
+++ b/client/src/components/layout/footer.module.css
@@ -6,7 +6,7 @@
     height: auto;
     padding: 32px;
     box-sizing: border-box;
-    font-family: 'Segoe UI', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .footerContainer {
