Refactor: centralized css colors into variables (#165)
Refactored CSS color variables to follow a consistent naming and
structure.

Removed unused or duplicate color variables.

Updated relevant styles and components to use the new variables.

Fixes #163

---------

Co-authored-by: kaushik <kaushik.periyasamy@playnext-lab.co.jp>

--- a/client/src/components/layout/header.css
+++ b/client/src/components/layout/header.css
@@ -6,8 +6,8 @@
   width: max;
 
   color-scheme: light dark;
-  color: var(--primary-text-color-white);
-  background-color: var(--primary-background-color-gray);
+  color: var(--color-white);
+  background-color: var(--color-gray-1);
   text-transform: uppercase;
 
   .logoImage {
@@ -17,14 +17,14 @@
 
 
   select {
-    background-color: var(--primary-background-color-gray);
-    color: var(--primary-text-color-white);
+    background-color: var(--color-gray-1);
+    color: var(--color-white);
     font-size: 16px;
   }
 
   .language-icon {
     width: 20px;
     height: 20px;
-    color: var(--primary-text-color-white);
+    color: var(--color-white);
   }
 }
