--- a/client/src/components/layout/header.module.css
+++ b/client/src/components/layout/header.module.css
@@ -5,8 +5,7 @@
   gap: 16px;
   width: 100%;
   color-scheme: light dark;
-  color: var(--primary-text-color-white);
-  background-color: #2e2e2e;
+  color: var(--color-white);
   text-transform: uppercase;
 }
 
