--- a/client/src/components/pages/coming-soon/pageheader.css
+++ b/client/src/components/pages/coming-soon/pageheader.css
@@ -1,7 +1,7 @@
 .pageheader {
-    background-color: var(--primary-background-color-gray);
+    background-color: var(--color-gray-1);
     box-shadow: 0px 25px 20px 0px rgba(0, 0, 0, 0.45);
-    color: var(--primary-text-color-white);
+    color: var(--color-white);
     padding-inline: 2rem;
 
     .text-container {
