--- a/client/src/components/pages/database/breakdown-chart.css
+++ b/client/src/components/pages/database/breakdown-chart.css
@@ -3,7 +3,7 @@
     width: 640px;
     border-collapse: collapse;
     font-family: sans-serif;
-    background: #f2f2f2;
+    background:var(--color-ui);
     border-radius: 4px;
     margin-top: 1rem; 
   }
@@ -13,7 +13,7 @@
     padding: 8px 16px;
     font-weight: normal;
     font-style: italic;
-    background-color: #f2f2f2;
+    background-color:var(--color-ui);
     border-bottom: 1px solid #000;
     text-align: left;
   }
@@ -42,6 +42,6 @@
   }
 
   .breakdown-chart tbody tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: var(--color-ui);
   }
 }
