--- a/client/src/components/pages/database/subheader.module.css
+++ b/client/src/components/pages/database/subheader.module.css
@@ -8,20 +8,20 @@
   padding: 32px 32px;
   /* reduced right padding for small screens */
   gap: 8px;
-  background-color: #fdfdfd;
+  background-color:var(--color-light);
   box-sizing: border-box;
 }
 
 .heading {
   font-size: 32px;
   font-weight: 600;
-  color: #2e2e2e;
+  color:var(--color-dark);
   margin: 0;
 }
 
 .description {
   font-size: 16px;
-  color: #2e2e2e;
+  color:var(--color-dark);
   margin: 0;
 }
 
